create github pages

--- a/product.html
+++ b/product.html
@@ -9,7 +9,7 @@
   <link rel="shortcut icon" href="assets/images/agenyz-164x70.png" type="image/x-icon">
   <meta name="description" content="Продукция">
   
-  <title>Регистрация</title>
+  <title>Продукция</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">free portfolio site templates</a></section><section class="features15 cid-roPOiOBqrR" id="features15-13">
+<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="features15 cid-roPOiOBqrR" id="features15-13">
 
     
 
