create github pages

--- a/регистрация.html
+++ b/регистрация.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="features15 cid-roPOiOBqrR" id="features15-13">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="features15 cid-roPOiOBqrR" id="features15-13">
 
     
 
