--- a/регистрация.html
+++ b/регистрация.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="features15 cid-roPOiOBqrR" id="features15-13">
+<section class="engine"><a href="https://mobirise.info/e">how to make your own website for free</a></section><section class="features15 cid-roPOiOBqrR" id="features15-13">
 
     
 
