--- a/product.html
+++ b/product.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/agenyz-164x70.png" type="image/x-icon">
   <meta name="description" content="Продукция
-подробно">
+">
   
   <title>Продукция</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="features15 cid-roPOiOBqrR" id="features15-13">
+<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><section class="features15 cid-roPOiOBqrR" id="features15-13">
 
     
 
