create github pages

--- a/биохакинг.html
+++ b/биохакинг.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a site</a></section><section class="features15 cid-roPOiOBqrR" id="features15-13">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="features15 cid-roPOiOBqrR" id="features15-13">
 
     
 
@@ -78,7 +78,7 @@
             <div class="col-12 col-md-6 mb-4 col-lg-4">
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <a href="TrueShake.html" target="_blank"><img src="assets/images/-true-shake-773x449.jpg" alt="Mobirise" title=""></a>
+                        <img src="assets/images/-true-shake-773x449.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title display-5 py-2 mbr-fonts-style">Конструктор умных коктейлей TRUE SHAKE</h4>
@@ -91,7 +91,7 @@
                 
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <a href="CellElixir.html" target="_blank"><img src="assets/images/cellelixir-2-786x502.jpg" alt="Mobirise" title=""></a>
+                        <img src="assets/images/cellelixir-2-786x502.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-5">Перезагрузка своего организма</h4>
@@ -103,7 +103,7 @@
             <div class="col-12 col-md-6 mb-4 col-lg-4">
                 <div class="card flip-card p-5 align-center">
                     <div class="card-front card_cont">
-                        <a href="TrueAqua.html"><img src="assets/images/-true-aqua-619x418.jpg" alt="Mobirise" title=""></a>
+                        <img src="assets/images/-true-aqua-619x418.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card_back card_cont">
                         <h4 class="card-title py-2 mbr-fonts-style display-5">Функциональные напитки TRUE AQUA</h4>
