--- a/регистрация.html
+++ b/регистрация.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a website for free</a></section><section class="features15 cid-roPOiOBqrR" id="features15-13">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="features15 cid-roPOiOBqrR" id="features15-13">
 
     
 
