--- a/TrueShake.html
+++ b/TrueShake.html
@@ -42,7 +42,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://mobirise.com">
-                         <img src="assets/images/agenyz-164x70.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                         <img src="assets/images/agenyz-164x70.png" alt="Mobirise" title="" style="height: 4.5rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">Alfa-team</a></span>
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="features3 cid-roHVoe1kQN" id="features3-g">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="features3 cid-roHVoe1kQN" id="features3-g">
 
     
 
