--- a/product.html
+++ b/product.html
@@ -43,7 +43,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://mobirise.com">
-                         <img src="assets/images/agenyz-164x70.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                         <img src="assets/images/agenyz-164x70.png" alt="Mobirise" title="" style="height: 4.5rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">Alfa-team</a></span>
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create your own website for free</a></section><section class="features15 cid-roPOiOBqrR" id="features15-13">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="features15 cid-roPOiOBqrR" id="features15-13">
 
     
 
