--- a/биохакинг.html
+++ b/биохакинг.html
@@ -43,7 +43,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="https://mobirise.com">
-                         <img src="assets/images/agenyz-164x70.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                         <img src="assets/images/agenyz-164x70.png" alt="Mobirise" title="" style="height: 4.5rem;">
                     </a>
                 </span>
                 <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">Alfa-team</a></span>
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="header1 cid-rog5cfv25E" id="header16-9">
+<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="header1 cid-rog5cfv25E" id="header16-9">
 
     
 
