--- a/регистрация.html
+++ b/регистрация.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple web maker</a></section><section class="features15 cid-roPOiOBqrR" id="features15-13">
+<section class="engine"><a href="https://mobirise.info/b">create a website</a></section><section class="features15 cid-roPOiOBqrR" id="features15-13">
 
     
 
