--- a/регистрация.html
+++ b/регистрация.html
@@ -42,10 +42,10 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     
-                         <img src="assets/images/agenyz-164x70.png" alt="Mobirise" title="" style="height: 4.5rem;">
+                         <a href="регистрация.html"><img src="assets/images/agenyz-164x70.png" alt="Mobirise" title="" style="height: 4.5rem;"></a>
                     
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="https://mobirise.com">Alfa-team</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-white display-4" href="регистрация.html" target="_blank">Alfa-team</a></span>
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -62,7 +62,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/k">how to develop free website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/x">css templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
