--- a/регистрация.html
+++ b/регистрация.html
@@ -29,7 +29,7 @@
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-toggleable-sm">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -54,7 +54,7 @@
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Главная</a>
                 </li><li class="nav-item"><a class="nav-link link text-white display-7" href="биохакинг.html" aria-expanded="false">Биохакинг</a></li><li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-7" href="/product.html" data-toggle="dropdown-submenu" aria-expanded="false">
-                        Продукция</a><div class="dropdown-menu"><a class="text-white dropdown-item display-7" href="CellElixir.html">Cell-Элликсиры</a><a class="text-white dropdown-item display-7" href="TrueShake.html" aria-expanded="false">Коктейли True Shake</a><a class="text-white dropdown-item display-7" href="TrueAqua.html" aria-expanded="false">Умная вода&nbsp;True Aqua</a><a class="text-white dropdown-item display-7" href="https://office.agenyz.com/data/files/upload/35/1809091645LQ7KOetI9t.pdf" aria-expanded="false" target="_blank">Производство и технологии</a><a class="text-white dropdown-item display-7" href="https://e.issuu.com/anonymous-embed.html?u=ycnex&d=___________________agenyz" aria-expanded="false" target="_blank">Отзывы о продукции&nbsp;</a></div></li>
+                        Продукция</a><div class="dropdown-menu"><a class="text-white dropdown-item display-7" href="CellElixir.html">Cell-Элликсиры</a><a class="text-white dropdown-item display-7" href="TrueShake.html" aria-expanded="false">Коктейли True Shake</a><a class="text-white dropdown-item display-7" href="TrueAqua.html" aria-expanded="false">Умная вода&nbsp;True Aqua</a><a class="text-white dropdown-item display-7" href="Производство.html" aria-expanded="false">Производство и технологии</a><a class="text-white dropdown-item display-7" href="https://e.issuu.com/anonymous-embed.html?u=ycnex&d=___________________agenyz" aria-expanded="false" target="_blank">Отзывы о продукции&nbsp;</a></div></li>
                 <li class="nav-item dropdown"><a class="nav-link link text-white dropdown-toggle display-7" href="https://office.agenyz.com/data/files/upload/24423/1902211833hfyK5vLYf9.pdf" target="_blank" data-toggle="dropdown-submenu" aria-expanded="false">Как заработать<br></a><div class="dropdown-menu"><a class="text-white dropdown-item display-7" href="https://office.agenyz.com/data/files/upload/24423/1902211834EUc74ZTL3r.pdf" target="_blank">Подробное описание Маркетинг плана</a><a class="text-white dropdown-item display-7" href="https://office.agenyz.com/data/files/upload/24423/1902211833hfyK5vLYf9.pdf" target="_blank" aria-expanded="false">Маркетинг план с примерами</a></div></li><li class="nav-item"><a class="nav-link link text-white display-7" href="https://office.agenyz.com/?bonus=007-432703" target="_blank" aria-expanded="false">Стать партнером &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a></li></ul>
             
         </div>
@@ -62,7 +62,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
@@ -73,7 +73,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
