create github pages

--- a/home.html
+++ b/home.html
@@ -62,7 +62,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/f">easy website maker</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -78,9 +78,9 @@
 <br>Идея и миссия проекта заключается в том, чтобы объединить в единое комьюнити лидеров поколений Y, Z и А (Альфа) и помочь им состояться, создавать свое будущее, осмысленную, наполненную, полезную себе и окружающим людям жизнь; сохранять здоровье и повышать личную эффективность; иметь множественные источники дохода.
 <br>
 <br><strong>Вы можете развить себя вместе с нами в 3-х направлениях:
-</strong><br><strong>Bio Hacking</strong> — управление ресурсами своего организма для повышения его эффективности и на его благо.
-<br><strong>e-Learning</strong> — онлайн-обучение в самых востребованных и перспективных направлениях.
-<br><strong>FinTech</strong> — использование финансовых технологий и инвестирования.
+</strong><br><strong><em>Bio Hacking</em></strong> — управление ресурсами своего организма для повышения его эффективности и на его благо.
+<br><strong><em>e-Learning</em></strong> — онлайн-обучение в самых востребованных и перспективных направлениях.
+<br><strong><em>FinTech</em></strong> — использование финансовых технологий и инвестирования.
 <br><br><strong>Цель AGenYZ — чтобы каждый партнер компании мог создать для себя множественные источники дохода.
 </strong><br>Все это возможно благодаря автоматизации бизнес-процессов на принципах органического роста бизнеса.
 <br>
