create github pages

--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop your own website</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/g">build a website for free</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -110,8 +110,8 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://office.agenyz.com/?bonus=007-432703" target="_blank">
-                        <img src="assets/images/img-1956-192x107.png" alt="Mobirise" title="">
+                    <a href="https://office.agenyz.com/?bonus=007-432703">
+                        <img src="assets/images/-390x547.jpg" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
