--- a/О деньгах.html
+++ b/О деньгах.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/y">free html website templates</a></section><section class="mbr-section content5 cid-rphcMf8Sue mbr-parallax-background" id="content5-2m">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="mbr-section content5 cid-rphcMf8Sue mbr-parallax-background" id="content5-2m">
 
     
 
@@ -657,8 +657,8 @@
         <div class="media-container-row content text-white">
             <div class="col-12 col-md-3">
                 <div class="media-wrap">
-                    <a href="https://office.agenyz.com/?bonus=007-432703" target="_blank">
-                        <img src="assets/images/img-1956-192x107.png" alt="Mobirise" title="">
+                    <a href="https://office.agenyz.com/?bonus=007-432703">
+                        <img src="assets/images/image-390x220.jpg" alt="Mobirise" title="">
                     </a>
                 </div>
             </div>
