create github pages

--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a website for free</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/n">free simple web templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -74,7 +74,7 @@
             <div class="mbr-white col-md-10">
                 
                 <h3 class="mbr-section-subtitle align-center mbr-light pb-3 mbr-fonts-style display-2"></h3>
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">&nbsp;<strong>AGenYZ — проект, главной ценностью которого является человек. Всё, что делается компанией, делается для человека и вокруг него.
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">&nbsp;<br><br><br><strong>AGenYZ — проект, главной ценностью которого является человек. Всё, что делается компанией, делается для человека и вокруг него.
 </strong><br>
 <br>Идея и миссия проекта заключается в том, чтобы объединить в единое комьюнити лидеров поколений Y, Z и А (Альфа) и помочь им состояться, создавать свое будущее, осмысленную, наполненную, полезную себе и окружающим людям жизнь; сохранять здоровье и повышать личную эффективность; иметь множественные источники дохода.
 <br>
