create github pages

--- a/маркетинг-план.html
+++ b/маркетинг-план.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop own website</a></section><section class="cid-rpcjNVfJQY" id="footer1-2j">
+<section class="engine"><a href="https://mobirise.info/q">responsive website templates</a></section><section class="cid-rpcjNVfJQY" id="footer1-2j">
 
     
 
