create github pages

--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a website for free</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -137,7 +137,7 @@
             </div>
             <div class="media-container-row mbr-white">
                 <div class="col-sm-6 copyright">
-                    <p class="mbr-text mbr-fonts-style display-7">По &nbsp;вопросам &nbsp;партнерства &nbsp;и &nbsp;продукции &nbsp;свяжитесь &nbsp;с &nbsp;нами &nbsp; по телефону, &nbsp;email &nbsp;или &nbsp;через &nbsp;соц.сети</p>
+                    <p class="mbr-text mbr-fonts-style display-7">По &nbsp;вопросам &nbsp;партнерства &nbsp;или &nbsp;приобретения продукции &nbsp;свяжитесь &nbsp;с &nbsp;нами &nbsp; по телефону, &nbsp;email &nbsp;или &nbsp;через &nbsp;соц.сети</p>
                 </div>
                 <div class="col-md-6">
                     <div class="social-list align-right">
