create github pages

--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create your own web page for free</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -288,7 +288,7 @@
                 <div class="card-wrapper ">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="регистрация.html" class="btn btn-primary display-4" target="_blank">Подробнее</a></div>
+                        <div class="mbr-section-btn text-center"><a href="https://office.agenyz.com/reguser.html" class="btn btn-primary display-4" target="_blank">Подробнее</a></div>
                         <img src="assets/images/mbm-set-trueaqua-390x360.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
@@ -307,7 +307,7 @@
                 <div class="card-wrapper">
                     <div class="card-img">
                         <div class="mbr-overlay"></div>
-                        <div class="mbr-section-btn text-center"><a href="регистрация.html" class="btn btn-primary display-4" target="_blank">Подробнее</a></div>
+                        <div class="mbr-section-btn text-center"><a href="https://office.agenyz.com/reguser.html" class="btn btn-primary display-4" target="_blank">Подробнее</a></div>
                         <img src="assets/images/mbm-set-nulti-392x365.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
