create github pages

--- a/CellElixir.html
+++ b/CellElixir.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="features3 cid-roHVoe1kQN" id="features3-g">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="features3 cid-roHVoe1kQN" id="features3-g">
 
     
 
@@ -73,7 +73,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://agenyz.com/product/cellgenetix/"><img src="assets/images/-cellgenetix-352x395.jpg" alt="sorbiodetox,agenyz,ttrueaqua,виталий ващенко," title="sorbiodetox,agenyz,ttrueaqua,виталий ващенко,"></a>
+                        <img src="assets/images/-cellgenetix-352x395.jpg" alt="sorbiodetox,agenyz,ttrueaqua,виталий ващенко," title="sorbiodetox,agenyz,ttrueaqua,виталий ващенко,">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><div><span style="font-size: 1rem;">СеллГенетикс (CellGenetiX)</span><br></div></h4>
@@ -104,7 +104,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://agenyz.com/product/alfaomega-q10/"><img src="assets/images/-q10-alfaomega-q10-358x388.jpg" alt="Mobirise" title=""></a>
+                        <img src="assets/images/-q10-alfaomega-q10-358x388.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">АльфаОмега-Q10 (AlfaOmega-Q10)</h4>
@@ -135,7 +135,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://agenyz.com/product/3d-matrix/"><img src="assets/images/3-3d-matrix-378x405.jpg" alt="Mobirise" title=""></a>
+                        <img src="assets/images/3-3d-matrix-378x405.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">3Д-Матрикс (3D-Matrix)</h4>
@@ -175,7 +175,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://agenyz.com/product/gepaint/" target="_blank"><img src="assets/images/-gepaint-381x395.jpg" alt="Mobirise" title=""></a>
+                        <img src="assets/images/-gepaint-381x395.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">ГепаИнт (GepaInt)</h4>
@@ -207,7 +207,7 @@
             <div class="card p-3 col-12 col-md-6">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://agenyz.com/product/slimhit/"><img src="assets/images/-slimhit-389x394.jpg" alt="Mobirise" title=""></a>
+                        <img src="assets/images/-slimhit-389x394.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><br>СлимХит (SlimHit)</h4>
