--- a/TrueShake.html
+++ b/TrueShake.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">website creation software</a></section><section class="features3 cid-roHVoe1kQN" id="features3-g">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="features3 cid-roHVoe1kQN" id="features3-g">
 
     
 
@@ -73,7 +73,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://agenyz.com/product/alfashake/"><img src="assets/images/-alfa-shake-384x484.jpg" alt="sorbiodetox,agenyz,ttrueaqua,виталий ващенко," title="sorbiodetox,agenyz,ttrueaqua,виталий ващенко,"></a>
+                        <img src="assets/images/-alfa-shake-384x484.jpg" alt="sorbiodetox,agenyz,ttrueaqua,виталий ващенко," title="sorbiodetox,agenyz,ttrueaqua,виталий ващенко,">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><div>АЛЬФА ШЕЙК (ALFA SHAKE)</div><div><br></div></h4>
@@ -110,7 +110,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://agenyz.com/product/alfamix/" target="_blank"><img src="assets/images/-alfa-mix-382x554.jpg" alt="Mobirise" title=""></a>
+                        <img src="assets/images/-alfa-mix-382x554.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">АЛЬФА МИКС (ALFA MIX)<br>серия «умных» коктейлей</h4>
@@ -139,7 +139,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://agenyz.com/product/beautyz/" target="_blank"><img src="assets/images/-beautyz-377x471.jpg" alt="Mobirise" title=""></a>
+                        <img src="assets/images/-beautyz-377x471.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">+БЬЮТИЗ (+BEAUTYZ)<br>вкус Кофе-Мокко</h4>
@@ -189,7 +189,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://agenyz.com/product/relaxyz/" target="_blank"><img src="assets/images/-relaxyz-379x467.jpg" alt="Mobirise" title=""></a>
+                        <img src="assets/images/-relaxyz-379x467.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">+РЕЛАКСИЗ (+RELAXYZ )<br>вкус Лесных ягод</h4>
@@ -231,7 +231,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://agenyz.com/product/shapyz/" target="_blank"><img src="assets/images/-shapyz-384x469.jpg" alt="Mobirise" title=""></a>
+                        <img src="assets/images/-shapyz-384x469.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">+ШЕЙПИЗ (+SHAPYZ)<br>вкус Ванили</h4>
@@ -271,7 +271,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://agenyz.com/product/digestyz/" target="_blank"><img src="assets/images/-digestyz-382x476.jpg" alt="Mobirise" title=""></a>
+                        <img src="assets/images/-digestyz-382x476.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">+ДАЙДЖЕСТИЗ (+ DIGESTYZ)&nbsp;<br>со вкусом Лаймового пирога</h4>
@@ -318,7 +318,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-3">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://agenyz.com/product/greenyz/" target="_blank"><img src="assets/images/-greenyz-384x474.jpg" alt="Mobirise" title=""></a>
+                        <img src="assets/images/-greenyz-384x474.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">+ГРИНИЗ (+GREENYZ)<br>Со свежим вкусом киви</h4>
