--- a/TrueAqua.html
+++ b/TrueAqua.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="features3 cid-roHVoe1kQN" id="features3-g">
+<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="features3 cid-roHVoe1kQN" id="features3-g">
 
     
 
@@ -73,7 +73,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://agenyz.com/product/sorbiodetox/" target="_blank"><img src="assets/images/sorbiodetox-469x420.jpg" alt="sorbiodetox,agenyz,ttrueaqua,виталий ващенко," title="sorbiodetox,agenyz,ttrueaqua,виталий ващенко,"></a>
+                        <img src="assets/images/sorbiodetox-469x420.jpg" alt="sorbiodetox,agenyz,ttrueaqua,виталий ващенко," title="sorbiodetox,agenyz,ttrueaqua,виталий ващенко,">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">СорбиоДетокс Селл <br>(SorbioDetox Cell)
@@ -111,7 +111,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://agenyz.com/product/ph-balance-cell/" target="_blank"><img src="assets/images/h-balance-cell-366x345.jpg" alt="Mobirise" title=""></a>
+                        <img src="assets/images/h-balance-cell-366x345.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">рН Баланс Селл <br>(рH Balance Cell)</h4>
@@ -146,7 +146,7 @@
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <a href="https://agenyz.com/product/immune-cell/"><img src="assets/images/immune-cell-344x353.jpg" alt="Mobirise" title=""></a>
+                        <img src="assets/images/immune-cell-344x353.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><a href="https://agenyz.com/product/ph-balance-cell/" target="_blank">Иммун Селл </a><br><a href="https://agenyz.com/product/ph-balance-cell/" target="_blank">(Immune Cell)</a></h4>
