--- a/О деньгах.html
+++ b/О деньгах.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="mbr-section content5 cid-rphcMf8Sue mbr-parallax-background" id="content5-2m">
+<section class="engine"><a href="https://mobirise.info/f">simple site builder</a></section><section class="mbr-section content5 cid-rphcMf8Sue mbr-parallax-background" id="content5-2m">
 
     
 
