create github pages

--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="cid-qTkA127IK8 mbr-fullscreen mbr-parallax-background" id="header2-1">
 
     
 
@@ -251,7 +251,7 @@
         <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2"><strong>
             Внимание!</strong></h2>
         <h3 class="mbr-section-subtitle align-center mbr-fonts-style display-5">
-            <a href="https://office.agenyz.com/?bonus=007-432703" target="_blank">Для зарегистрировавшихся и акитивировавших регистрацию</a> до конца работы таймера партнеров - в подарок супер-школа "Ваши первые эффективные шаги"</h3>
+            <a href="https://office.agenyz.com/?bonus=007-432703" target="_blank">Для зарегистрировавшихся и акитивировавших регистрацию</a> до конца работы таймера партнеров - в подарок супер-школа: "Как за первый месяц заработать &nbsp;<br>от 40 000 рублей в Вашем бизнесе AGenYZ"</h3>
     </div>
     <div class="container pt-5 mt-2">
         <div class=" countdown-cont align-center p-4">
