create github pages

--- a/TrueAqua.html
+++ b/TrueAqua.html
@@ -63,7 +63,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="features3 cid-roHVoe1kQN" id="features3-g">
+<section class="engine"><a href="https://mobirise.info/e">make a site</a></section><section class="features3 cid-roHVoe1kQN" id="features3-g">
 
     
 
@@ -78,29 +78,37 @@
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7">СорбиоДетокс Селл <br>(SorbioDetox Cell)
 <div><br></div><br><div>Клеточное очищение и </div><div>детоксикация</div><div>— высокоэффективный энтеросорбент при интоксикациях различной этиологии, сорбирует и выводит токсины, повышает эффективность работы органов детоксикации организма, является источником растворимых пищевых волокон, улучшает функциональное состояние ЖКТ.</div></h4>
-                        <p class="mbr-text mbr-fonts-style display-7"><strong>Показания к применению:
-</strong><br>- клеточное очищение
-<br>- при кишечных инфекциях
-<br>- при заболеваниях желудочно-кишечного тракта
-<br>- при аллергических заболеваниях
-<br>- при проблемах с сердечно-сосудистой системой
-<br>- при простудных заболеваниях
-<br>- при сахарном диабете
-<br>- при ожирении
-<br>- при заболеваниях почек
-<br>- людям, работающим на вредных производствах<br>
-<br><strong>Преимущества:</strong>
-<br>+ Безопасность для организма. <br>+ Не вызывает аллергических реакций и других побочных явлений.
-<br>+ Быстрая эвакуация из кишечника. <br>+ Не накапливается в организме, выводится с продуктами распада.
-<br>+ Высокая поглощающая способность. <br>+ «Связывает» вредные вещества и выводит их из организма.
-<br>+ Отсутствие десорбции. <br>+ Хорошо всасывается, даже при сильной рвоте не выходит обратно.
-<br>+Нейтральность к pH-среде. <br>+ Не нарушает естественного баланса в организме, улучшает микрофлору.
-<br>+ Положительное влияние на ЖКТ. + Способствует улучшению пищеварения и работе ферментов.
-<br>+ Простота применения. <br>+ Достаточно развести в воде и тщательно перемешать.
-<br>+ Приятный ненавязчивый вкус. <br>+ Отличается от других сорбентов, которые неприятно принимать.
-<br>+ Без сахара
-<br>+ Без ГМО
-<br>+ Удобная упаковка-саше. Можно взять с собой.</p>
+                        <p class="mbr-text mbr-fonts-style display-7"><em><strong>SorbioDetox Cell (СорбиоДетокс Селл) состоит из природных сорбентов и натуральной клетчатки, которые очищают организм на клеточном уровне. </strong>Входящие в состав <strong>камедь акации (фибрегам), кремний, лактулоза, полисорбовит</strong> способствуют выведению вредных веществ, солей тяжелых металлов, обладают пребиотическим действием и оказывают положительное влияние на состояние микрофлоры организма. Вещества быстро «обнаруживают» токсины в организме и выводят их. Растворимая форма продукта позволяет быстрому усвоению всех его компонентов. 
+<br></em>
+<br>Еще в детокс — комплексе содержится <strong>Арабиногалактан</strong> — природный иммуномодулятор и пребиотик. Абсолютно натуральный ингредиент, добываемый из растений. Если вы часто болеете, то наш продукт поспособствует тому, что организм будет лучше сопротивляться вредоносным бактериям.<strong> Лактулоза и диоксид кремния усиливают эффект. 
+</strong><br>
+<br><strong>Состав добавки</strong> <strong>имеет оптимальный комплекс клетчатки, </strong>который помогает очистить пищеварительный тракт от сгустков слизи и каловых «завалов», нейтрализовать гниющие токсины, одновременно действуя при этом в качестве смазочного материала для пищеварительного тракта. Благодаря содержанию <strong>растительного клея,</strong> клетчатка оказывает успокаивающее действие на слизистую кишечника, кроме того, набухая, клетчатка увеличивает объем и обеспечивают стимуляцию моторно-эвакуаторной функций кишечника. <strong>Пектины</strong> способствуют улучшению простеночного пищеварения и нормализации микробиоценоза кишечника, улучшают состояние кожных покровов. 
+<br>
+<br>Биологически активные компоненты, входящие в состав сорбционного комплекса, помогают восстанавливать поврежденные слизистые оболочки желудочно-кишечного тракта, а также защищать их от канцерогенного воздействия продуктов распада пищи. 
+<br>
+<br><strong>Показания к применению: 
+</strong><br>клеточное очищение 
+<br>при кишечных инфекциях 
+<br>при заболеваниях желудочно-кишечного тракта 
+<br>при аллергических заболеваниях 
+<br>при проблемах с сердечно-сосудистой системой 
+<br>при простудных заболеваниях 
+<br>при сахарном диабете 
+<br>при ожирении 
+<br>при заболеваниях почек 
+<br>людям, работающим на вредных производствах 
+<br><br><strong>Преимущества: 
+</strong><br>Безопасность для организма. Не вызывает аллергических реакций и других побочных явлений. 
+<br>Быстрая эвакуация из кишечника. Не накапливается в организме, выводится с продуктами распада. 
+<br>Высокая поглощающая способность. «Связывает» вредные вещества и выводит их из организма. 
+<br>Отсутствие десорбции. Хорошо всасывается, даже при сильной рвоте не выходит обратно. 
+<br>Нейтральность к pH-среде. Не нарушает естественного баланса в организме, улучшает микрофлору. 
+<br>Положительное влияние на ЖКТ. Способствует улучшению пищеварения и работе ферментов. 
+<br>Простота применения. Достаточно развести в воде и тщательно перемешать. 
+<br>Приятный ненавязчивый вкус. Отличается от других сорбентов, которые неприятно принимать. 
+<br>Без сахара 
+<br>Без ГМО 
+<br>Удобная упаковка-саше. <br>Можно взять с собой.</p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://agenyz.com/product/sorbiodetox/" class="btn btn-primary display-4" target="_blank">
                             Подробнее
@@ -150,32 +158,47 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style display-7"><a href="https://agenyz.com/product/ph-balance-cell/" target="_blank">Иммун Селл </a><br><a href="https://agenyz.com/product/ph-balance-cell/" target="_blank">(Immune Cell)</a></h4>
-                        <p class="mbr-text mbr-fonts-style display-7"><strong>Cпособствует регуляции водного, витаминно-минерального, энергетического и иммунного статуса организма.</strong><br><strong>• поддерживает все типы обмена веществ
-<br>• участвует в энергообеспечении организма
-<br>• улучшает тканевое дыхание
-<br>• повышает резистентность к физическим и умственным нагрузкам
-<br>• поддерживает иммунитет
-<br>• стимулирует кроветворение
-<br>• обладает антиоксидантным действием
-<br>• благоприятно влияет на состояние кожи, волос, ногтей
-<br>• регулирует водный баланс</strong><br><br><strong>Показания к применению:
-</strong><br>• для профилактики дефицита витаминов и минералов
-<br>• при несбалансированном и неполноценном питании
-<br>• при повышенных физических и умственных нагрузках
-<br>• в период выздоровления после перенесенных заболеваний
-<br>• при стрессовых ситуациях
-<br><br><strong>Преимущества:
-</strong><br>• Сбалансированный состав с оптимальными дозировками
-<br>• Липосомированная форма витаминов и йода, что обеспечивает высокую биодоступность
-<br>• Быстрый эффект за счёт растворимости компонентов
-<br>• Возможность контроля питьевого режима
-<br>• Дробная коррекция витаминного статуса в течение дня
-<br>• Употребление не зависит от приема пищи
-<br>• Простота применения. Достаточно развести в воде и тщательно перемешать.
-<br>• Приятный вкус. Легко пьется.
-<br>• Без сахара
-<br>• Без ГМО
-<br>• Удобная упаковка-саше. Можно взять с собой.<br></p>
+                        <p class="mbr-text mbr-fonts-style display-7"><strong>Клеточный иммунитет 
+</strong><br><strong>Immune Cell (Иммун Селл) способствует регуляции водного, витаминно-минерального, энергетического и иммунного статуса организма. 
+</strong><br>
+<br><em><strong>Липосомированный натуральный витаминно-минеральный напиток, </strong>сделанный на основе нанотехнологий. 7 ультрализатов пептидных бифидо- и лакто- бактерий, инулин, экстракты чаги и зеленого чая способствуют укреплению иммунитета. </em>Рекомендуется при несбалансированном питании, повышенных физических и умственных нагрузках, при повышенной утомляемости и в стрессовых ситуациях.
+<br>
+<br>Комплекс Иммун Селл (Immune Cell): 
+<br>• поддерживает все типы обмена веществ 
+<br>• участвует в энергообеспечении организма 
+<br>• улучшает тканевое дыхание 
+<br>• повышает резистентность к физическим и умственным нагрузкам 
+<br>• поддерживает иммунитет 
+<br>• стимулирует кроветворение 
+<br>• обладает антиоксидантным действием 
+<br>• благоприятно влияет на состояние кожи, волос, ногтей 
+<br>• регулирует водный баланс 
+<br>Контроль водного баланса необходимо осуществлять ежедневно, поскольку вода является основой любой клетки. Организм человека на две трети состоит из воды. 
+<br>
+<br>Вода в организме человека выполняет множество функций, все биохимические процессы в организме протекают в водном растворе. При недостатке воды замедляется обмен веществ, кровь становится вязкой, органы не насыщаются кислородом в нужном количестве, пульс учащается, нагрузка на организм повышается, работоспособность уменьшается. 
+<br>
+<br>Поскольку организм постоянно теряет жидкость разными путями (с продуктами распада, через кожу, через дыхание), то очень важно в течение дня соблюдать питьевой режим для поддержания жизнедеятельности организма. 
+<br>
+<br>Вы, конечно, знаете, что вода сама по себе полезна. А можно сделать ее еще полезнее. С новым продуктом из линейки TRUE AQUA это легко и быстро. Достаточно всего лишь растворить в стакане воды натуральное порошкообразное средство Immune Cell (Иммун Селл). Тогда это будет уже не просто жидкость, а настоящий эликсир здоровья. И, самое главное, полезные вещества начнут действовать мгновенно — как только вы сделаете глоток. 
+<br>
+<br>Показания к применению: 
+<br>• для профилактики дефицита витаминов и минералов 
+<br>• при несбалансированном и неполноценном питании 
+<br>• при повышенных физических и умственных нагрузках 
+<br>• в период выздоровления после перенесенных заболеваний 
+<br>• при стрессовых ситуациях 
+<br>Преимущества: 
+<br>• Сбалансированный состав с оптимальными дозировками 
+<br>• Липосомированная форма витаминов и йода, что обеспечивает высокую биодоступность 
+<br>• Быстрый эффект за счёт растворимости компонентов 
+<br>• Возможность контроля питьевого режима 
+<br>• Дробная коррекция витаминного статуса в течение дня 
+<br>• Употребление не зависит от приема пищи 
+<br>• Простота применения. Достаточно развести в воде и тщательно перемешать. 
+<br>• Приятный вкус. Легко пьется. 
+<br>• Без сахара 
+<br>• Без ГМО 
+<br>• Удобная упаковка-саше. Можно взять с собой.&nbsp;<br></p>
                     </div>
                     <div class="mbr-section-btn text-center"><a href="https://agenyz.com/product/immune-cell/" class="btn btn-primary display-4" target="_blank">
                             Подробнее
