--- a/home.html
+++ b/home.html
@@ -63,14 +63,14 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp template</a></section><section class="features18 popup-btn-cards cid-rqruyexV1K" id="features18-3y">
+<section class="engine"><a href="https://mobirise.info/e">how to make a website</a></section><section class="features18 popup-btn-cards cid-rqruyexV1K" id="features18-3y">
 
     
 
     
     <div class="container">
         <h2 class="mbr-section-title pb-3 align-center mbr-fonts-style display-2"><strong>
-            На этом сайте представлено несколько основных разделов</strong><br><br></h2>
+            На &nbsp;этом &nbsp;сайте &nbsp;представлено &nbsp;несколько основных &nbsp;разделов</strong><br><br></h2>
         <h3 class="mbr-section-subtitle display-5 align-center mbr-fonts-style mbr-light display-2"><strong>О продукции Компании AGenYZ</strong><br>(Для перехода на страницу кликните по изображению или по кнопке)</h3>
         <div class="media-container-row pt-5 ">
             <div class="card p-3 col-12 col-md-6 col-lg-4">
