create github pages

--- a/page12.html
+++ b/page12.html
@@ -64,7 +64,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build your own site</a></section><section class="header1 cid-rqrtcW7FBr" id="header16-3w">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-rqrtcW7FBr" id="header16-3w">
 
     
 
